--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@openzeppelin/contracts": "^4.7.2",
     "@openzeppelin/contracts-upgradeable": "^4.7.2",
     "@openzeppelin/hardhat-upgrades": "^1.19.1",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.1",
     "dotenv": "^16.0.1"
   }
 }
